
- Refresh on connections window now take effect on both tabs, Audio
  (JACK) and MIDI (ALSA).

- OSS driver support and no-mlock option added to server settings, setup
  dialog (as of JACK 0.95.7+).

- Temporary server configuration option added, applicable to the auto-start
  server feature on client applications, whether the server shall exit once
  all clients are closed.
  

0.2.6   2004-02-29  More work in progress.

- Message window line limit is now a configurable option on setup, as is
  whether the command-line local configuration file gets saved at all;
  the first argument of the command-line configuration is stuffed
  to be the executable server command absolute path, when possible. 

- Warning message issued if ALSA sequencer is not available on startup;
  also if server settings are changed while client is currently active.

- Server autostart magic is locally disabled by forcing the environment 
  variable JACK_NO_START_SERVER at startup; with any luck this will
  maintain qjackctl's behaviour whether the JACK server is already 
  started or not.

- Makefile.cvs makes its late entrance on the build toolset.

  
0.2.5  2004-02-16  Server survival option and command-line wrapper feature.

- New option on application exit for leaving the JACK server daemon running,
  surviving the parent process; the confirmation prompt on application close
  now features a "Terminate", "Leave" and "Cancel" button options.

- New command-line wrapper feature for JACK client applications, thus
  giving a convenient head start for the JACK audio server as needed
  (as suggested by Fernando Pablo Lopez-Lezcano, of Planet CCRMA fame).

- Messages, Status, Connections and Patchbay pop-up windows are not hinted 
  as dialogs anymore and thus are not centered relative to parent main window 
  which has become a strict Qt dialog widget behaviour (as of Qt 3.3+).

- Patchbay window content changes are now properly updated, without the need